# rvim

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md
.amazonq/rules/: 01-rust-begginer-rules.md
src/: error.rs  lib.rs  main.rs
src/application/: editor_service.rs  mod.rs  vim_bindings.rs
src/domain/: cursor.rs  editor_mode.rs  mod.rs  text_buffer.rs
src/editor/: buffer.rs  cursor.rs  mod.rs
src/infrastructure/: file_system.rs  mod.rs  terminal.rs
src/io/: fs.rs  mod.rs  terminal.rs
src/ports/: file_system.rs  terminal.rs
src/vim/: command.rs  keymap.rs  mod.rs  mode.rs
