[package]
name = "rvim"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
thiserror = "2.0.12"

[dev-dependencies]
assert_matches = "1.5.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
mockall = "0.13.1"
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
